# hello_rust_rocket

./: Cargo.toml  README.md  Rocket.toml
db/: docker-compose.yml
db/initdb/: CREATE_TODO_TABLE.sql  CREATE_USER_TABLE.sql
src/: lib.rs  main.rs
src/controllers/: add.rs  detail.rs  edit.rs  list.rs  mod.rs
src/entity/: todo.rs
src/repositories/: mod.rs  todo_repository.rs
src/repositories/connection/: connection.rs
src/template_contents/: add.rs  detail.rs  list.rs
static/js/: list.js
templates/: add.html.tera  base.html.tera  detail.html.tera  header.html.tera  index.html.tera  list.html.tera
