[package]
name = "hello_rust_rocket"
version = "0.1.0"
authors = ["nishiura hiroki. <nishiurahiroki@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
postgres = "0.15"
multipart = "0.16.1"
log = "0.4.6"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["tera_templates", "serve"]
